<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/bottom_nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/baseline_home_24"
        />
    <item android:id="@+id/bottom_nav_post"
        android:title="@string/post"
        android:icon="@drawable/baseline_post_add_24"
        />
    <item android:id="@+id/bottom_nav_network"
        android:title="@string/network"
        android:icon="@drawable/bt_nav_network_selector"
        />
    <item android:id="@+id/bottom_nav_worklist"
        android:title="@string/work_list"
        android:icon="@drawable/bt_nav_work_selector"
        />
    <item android:id="@+id/bottom_nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/bt_nav_profile_selector"
        />
</menu>