<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <!--  <item
        android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        app:iconTint="@color/white"/>-->
   <!-- <item
        android:id="@+id/action_notification"
        android:icon="@drawable/baseline_notifications_none_24"
        android:title="Notifications"
        app:showAsAction="ifRoom"/>-->
  <item
      android:id="@+id/action_notification"
      android:title="Notifications"
      android:icon="@drawable/baseline_notifications_none_24"
      app:showAsAction="always"
      app:actionLayout="@layout/menu_item_notification" />

  <item
      android:id="@+id/action_refreshs"
      android:icon="@drawable/baseline_refresh_24"
      android:title="@string/refresh"
      app:showAsAction="ifRoom"
      android:visible="false"/>
  <item
      android:id="@+id/action_wallet"
      android:icon="@drawable/wallet_icon_inset"
      android:title="Wallet"
      app:showAsAction="ifRoom"
      android:visible="false"/>


  <item
      android:id="@+id/action_chat"
      android:icon="@drawable/chat_2"
      android:title="@string/chat"
      app:showAsAction="ifRoom"
      android:iconTint="@color/black"
      android:visible="false"/>

  <item
      android:id="@+id/action_post"
      android:icon="@drawable/write"
      android:title="@string/post"
      android:iconTint="@color/black"
      app:showAsAction="ifRoom"
      android:visible="false"/>
</menu>