<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.joblist.DescriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAbjob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/about_job"
            android:textColor="@color/heading_text"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvAboutJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_medium"
           android:textColor="@color/sub_text"
            android:textSize="@dimen/_12ssp" />


        <TextView
            android:id="@+id/tvkeResp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/key_responsibility"
            android:textColor="@color/heading_text"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvKeyResp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_12ssp" />

         <TextView
             android:id="@+id/tvQual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/qualification"
            android:textColor="@color/heading_text"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvqualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_12ssp" />


    </LinearLayout>
</FrameLayout>