<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/card_round_bg"
    android:fitsSystemWindows="true">


    <!-- Main Linear Layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top Indicator -->
        <View
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:background="@color/heading_text" />

        <!-- Title Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/heading_text"
            android:textSize="@dimen/_16ssp" />

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_ProfileImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/worker"
                app:civ_border_color="@color/border"
                app:civ_border_width="2dp" />

            <ImageView
                android:id="@+id/iv_Camedit"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/circle_background"
                android:padding="8dp"
                android:src="@drawable/baseline_photo_camera_24"
                app:tint="@color/white"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/border_box"
            android:drawableLeft="@drawable/baseline_person_2"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableTint="@color/sub_text"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textPersonName|textNoSuggestions"
            android:longClickable="true"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_16ssp"
            android:importantForAutofill="yes"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/etDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:background="@drawable/border_box"
            android:drawableLeft="@drawable/baseline_home_24"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableTint="@color/sub_text"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/designation"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textNoSuggestions"
            android:longClickable="true"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_16ssp"/>

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:background="@drawable/border_box"
            android:drawableLeft="@drawable/baseline_home_24"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableTint="@color/sub_text"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/company_name"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions|textCapSentences"
            android:longClickable="true"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone"/>

        <!-- Fixed Buttons -->
        <LinearLayout
            android:id="@+id/llbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">



            <!-- Save Button-->
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/border_box"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp" />

            <!-- Apply Button -->
            <TextView
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/submit"
                android:layout_weight="1"
                android:background="@drawable/bt_round_shape"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>